--- a/Scrape and Clean CIA Factbook 2018.ipynb
+++ b/Scrape and Clean CIA Factbook 2018.ipynb
@@ -266,19 +266,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 333,
+   "execution_count": 472,
    "metadata": {},
    "outputs": [],
    "source": [
     "Columns = ['Age structure', 'Area','Budget', 'Birth rate', 'Death rate', 'Debt - external', 'GDP (official exchange rate)',\n",
     "          'GDP - per capita (PPP)', 'Hospital bed density','Physicians density', 'Life expectancy at birth',\n",
     "           'Household income or consumption by percentage share', 'Population', 'Population below poverty line',\n",
-    "           'Religions', 'Unemployment rate']"
+    "           'Religions', 'Unemployment rate', 'Median age']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 334,
+   "execution_count": 473,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -295,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 335,
+   "execution_count": 474,
    "metadata": {},
    "outputs": [
     {
@@ -336,6 +336,7 @@
        "      <th>Population below poverty line</th>\n",
        "      <th>Religions</th>\n",
        "      <th>Unemployment rate</th>\n",
+       "      <th>Median age</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -358,6 +359,7 @@
        "      <td>[\\n54.5%\\n\\n(2017 est.)\\n]</td>\n",
        "      <td>[\\n          \\n        Muslim 99.7% (Sunni 84....</td>\n",
        "      <td>[\\n23.9%\\n\\n(2017 est.)\\n, \\n22.6%\\n\\n(2016 es...</td>\n",
+       "      <td>[\\ntotal:\\n19 years\\n\\n, \\nmale:\\n19 years\\n\\n...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>1</td>\n",
@@ -378,6 +380,7 @@
        "      <td>[\\n14.3%\\n\\n(2012 est.)\\n]</td>\n",
        "      <td>[\\n          \\n        Muslim 56.7%, Roman Cat...</td>\n",
        "      <td>[\\n13.8%\\n\\n(2017 est.)\\n, \\n15.2%\\n\\n(2016 es...</td>\n",
+       "      <td>[\\ntotal:\\n33.4 years\\n\\n, \\nmale:\\n32 years\\n...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>2</td>\n",
@@ -398,6 +401,7 @@
        "      <td>[\\n23%\\n\\n(2006 est.)\\n]</td>\n",
        "      <td>[\\n          \\n        Muslim (official; predo...</td>\n",
        "      <td>[\\n11.7%\\n\\n(2017 est.)\\n, \\n10.5%\\n\\n(2016 es...</td>\n",
+       "      <td>[\\ntotal:\\n28.3 years\\n\\n, \\nmale:\\n28 years\\n...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>3</td>\n",
@@ -418,6 +422,7 @@
        "      <td>[\\nNA\\n]</td>\n",
        "      <td>[\\n          \\n        Christian 98.3%, other ...</td>\n",
        "      <td>[\\n29.8%\\n\\n(2005)\\n]</td>\n",
+       "      <td>[\\ntotal:\\n26.1 years\\n\\n, \\nmale:\\n25.6 years...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>4</td>\n",
@@ -438,6 +443,7 @@
        "      <td>NaN</td>\n",
        "      <td>[\\n          \\n        Roman Catholic  (predom...</td>\n",
        "      <td>[\\n3.7%\\n\\n(2016 est.)\\n, \\n4.1%\\n\\n(2015 est....</td>\n",
+       "      <td>[\\ntotal:\\n44.9 years\\n\\n, \\nmale:\\n45.1 years...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -542,15 +548,22 @@
        "3  [\\n          \\n        Christian 98.3%, other ...   \n",
        "4  [\\n          \\n        Roman Catholic  (predom...   \n",
        "\n",
-       "                                   Unemployment rate  \n",
-       "0  [\\n23.9%\\n\\n(2017 est.)\\n, \\n22.6%\\n\\n(2016 es...  \n",
-       "1  [\\n13.8%\\n\\n(2017 est.)\\n, \\n15.2%\\n\\n(2016 es...  \n",
-       "2  [\\n11.7%\\n\\n(2017 est.)\\n, \\n10.5%\\n\\n(2016 es...  \n",
-       "3                              [\\n29.8%\\n\\n(2005)\\n]  \n",
-       "4  [\\n3.7%\\n\\n(2016 est.)\\n, \\n4.1%\\n\\n(2015 est....  "
+       "                                   Unemployment rate  \\\n",
+       "0  [\\n23.9%\\n\\n(2017 est.)\\n, \\n22.6%\\n\\n(2016 es...   \n",
+       "1  [\\n13.8%\\n\\n(2017 est.)\\n, \\n15.2%\\n\\n(2016 es...   \n",
+       "2  [\\n11.7%\\n\\n(2017 est.)\\n, \\n10.5%\\n\\n(2016 es...   \n",
+       "3                              [\\n29.8%\\n\\n(2005)\\n]   \n",
+       "4  [\\n3.7%\\n\\n(2016 est.)\\n, \\n4.1%\\n\\n(2015 est....   \n",
+       "\n",
+       "                                          Median age  \n",
+       "0  [\\ntotal:\\n19 years\\n\\n, \\nmale:\\n19 years\\n\\n...  \n",
+       "1  [\\ntotal:\\n33.4 years\\n\\n, \\nmale:\\n32 years\\n...  \n",
+       "2  [\\ntotal:\\n28.3 years\\n\\n, \\nmale:\\n28 years\\n...  \n",
+       "3  [\\ntotal:\\n26.1 years\\n\\n, \\nmale:\\n25.6 years...  \n",
+       "4  [\\ntotal:\\n44.9 years\\n\\n, \\nmale:\\n45.1 years...  "
       ]
      },
-     "execution_count": 335,
+     "execution_count": 474,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -812,6 +825,201 @@
    ],
    "source": [
     "len(df) == len(Frame)/5/2 # 5 age cateories and 2 sex cat"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 487,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Country</th>\n",
+       "      <th>Median age</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>0</td>\n",
+       "      <td>Afghanistan</td>\n",
+       "      <td>[\\ntotal:\\n19 years\\n\\n, \\nmale:\\n19 years\\n\\n...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1</td>\n",
+       "      <td>Albania</td>\n",
+       "      <td>[\\ntotal:\\n33.4 years\\n\\n, \\nmale:\\n32 years\\n...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2</td>\n",
+       "      <td>Algeria</td>\n",
+       "      <td>[\\ntotal:\\n28.3 years\\n\\n, \\nmale:\\n28 years\\n...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>3</td>\n",
+       "      <td>American Samoa</td>\n",
+       "      <td>[\\ntotal:\\n26.1 years\\n\\n, \\nmale:\\n25.6 years...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>4</td>\n",
+       "      <td>Andorra</td>\n",
+       "      <td>[\\ntotal:\\n44.9 years\\n\\n, \\nmale:\\n45.1 years...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          Country                                         Median age\n",
+       "0     Afghanistan  [\\ntotal:\\n19 years\\n\\n, \\nmale:\\n19 years\\n\\n...\n",
+       "1         Albania  [\\ntotal:\\n33.4 years\\n\\n, \\nmale:\\n32 years\\n...\n",
+       "2         Algeria  [\\ntotal:\\n28.3 years\\n\\n, \\nmale:\\n28 years\\n...\n",
+       "3  American Samoa  [\\ntotal:\\n26.1 years\\n\\n, \\nmale:\\n25.6 years...\n",
+       "4         Andorra  [\\ntotal:\\n44.9 years\\n\\n, \\nmale:\\n45.1 years..."
+      ]
+     },
+     "execution_count": 487,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "## median age:\n",
+    "median_df = df.copy()[['Country', 'Median age']]\n",
+    "median_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 491,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "median_df['median_age'] = median_df['Median age'].apply(lambda t: float(t[0].split('\\n')[2].split()[0])\n",
+    "                                                    if isinstance(t, list) else float('nan'))\n",
+    "\n",
+    "median_df['median_male'] = median_df['Median age'].apply(lambda t: float(t[1].split('\\n')[2].split()[0])\n",
+    "                                                    if isinstance(t, list) else float('nan'))\n",
+    "\n",
+    "median_df['median_female'] = median_df['Median age'].apply(lambda t: float(t[2].split('\\n')[2].split()[0])\n",
+    "                                                    if isinstance(t, list) else float('nan'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 495,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "median_df.drop('Median age', axis=1, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 496,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Country</th>\n",
+       "      <th>median</th>\n",
+       "      <th>median_male</th>\n",
+       "      <th>median_female</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>0</td>\n",
+       "      <td>Afghanistan</td>\n",
+       "      <td>19.0</td>\n",
+       "      <td>19.0</td>\n",
+       "      <td>19.1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1</td>\n",
+       "      <td>Albania</td>\n",
+       "      <td>33.4</td>\n",
+       "      <td>32.0</td>\n",
+       "      <td>34.7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2</td>\n",
+       "      <td>Algeria</td>\n",
+       "      <td>28.3</td>\n",
+       "      <td>28.0</td>\n",
+       "      <td>28.7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>3</td>\n",
+       "      <td>American Samoa</td>\n",
+       "      <td>26.1</td>\n",
+       "      <td>25.6</td>\n",
+       "      <td>26.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>4</td>\n",
+       "      <td>Andorra</td>\n",
+       "      <td>44.9</td>\n",
+       "      <td>45.1</td>\n",
+       "      <td>44.8</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          Country  median  median_male  median_female\n",
+       "0     Afghanistan    19.0         19.0           19.1\n",
+       "1         Albania    33.4         32.0           34.7\n",
+       "2         Algeria    28.3         28.0           28.7\n",
+       "3  American Samoa    26.1         25.6           26.5\n",
+       "4         Andorra    44.9         45.1           44.8"
+      ]
+     },
+     "execution_count": 496,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "median_df.head()"
    ]
   },
   {
@@ -1247,6 +1455,13 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1420,8 +1635,7 @@
    ],
    "source": [
     "selection = ['Country', 'Budget', 'Debt - external', 'GDP (official exchange rate)', 'GDP - per capita (PPP)']\n",
-    "eco_df = df.copy()[selection]\n",
-    "eco_df.head()"
+    "eco_df = df.copy()[selection]"
    ]
   },
   {
@@ -1850,6 +2064,145 @@
    "outputs": [],
    "source": [
     "Frame.to_csv('clean_CIA_data/Age_structure.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 497,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Country</th>\n",
+       "      <th>median</th>\n",
+       "      <th>median_male</th>\n",
+       "      <th>median_female</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>201</td>\n",
+       "      <td>Tajikistan</td>\n",
+       "      <td>24.8</td>\n",
+       "      <td>24.2</td>\n",
+       "      <td>25.4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>23</td>\n",
+       "      <td>Bhutan</td>\n",
+       "      <td>28.1</td>\n",
+       "      <td>28.6</td>\n",
+       "      <td>27.6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>207</td>\n",
+       "      <td>Trinidad and Tobago</td>\n",
+       "      <td>36.6</td>\n",
+       "      <td>36.1</td>\n",
+       "      <td>37.1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>184</td>\n",
+       "      <td>Sierra Leone</td>\n",
+       "      <td>19.1</td>\n",
+       "      <td>18.4</td>\n",
+       "      <td>19.7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>213</td>\n",
+       "      <td>Uganda</td>\n",
+       "      <td>15.9</td>\n",
+       "      <td>15.8</td>\n",
+       "      <td>16.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>70</td>\n",
+       "      <td>Fiji</td>\n",
+       "      <td>29.2</td>\n",
+       "      <td>29.0</td>\n",
+       "      <td>29.4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>101</td>\n",
+       "      <td>Israel</td>\n",
+       "      <td>30.1</td>\n",
+       "      <td>29.5</td>\n",
+       "      <td>30.7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>144</td>\n",
+       "      <td>Namibia</td>\n",
+       "      <td>21.4</td>\n",
+       "      <td>20.7</td>\n",
+       "      <td>22.2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>10</td>\n",
+       "      <td>Aruba</td>\n",
+       "      <td>39.5</td>\n",
+       "      <td>37.8</td>\n",
+       "      <td>41.2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>3</td>\n",
+       "      <td>American Samoa</td>\n",
+       "      <td>26.1</td>\n",
+       "      <td>25.6</td>\n",
+       "      <td>26.5</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                 Country  median  median_male  median_female\n",
+       "201           Tajikistan    24.8         24.2           25.4\n",
+       "23                Bhutan    28.1         28.6           27.6\n",
+       "207  Trinidad and Tobago    36.6         36.1           37.1\n",
+       "184         Sierra Leone    19.1         18.4           19.7\n",
+       "213               Uganda    15.9         15.8           16.0\n",
+       "70                  Fiji    29.2         29.0           29.4\n",
+       "101               Israel    30.1         29.5           30.7\n",
+       "144              Namibia    21.4         20.7           22.2\n",
+       "10                 Aruba    39.5         37.8           41.2\n",
+       "3         American Samoa    26.1         25.6           26.5"
+      ]
+     },
+     "execution_count": 497,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "median_df.sample(n=10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "median_df.to_csv('clean_CIA_data/median_age_country.')"
    ]
   },
   {
